2003-10-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/regiongetsegment.c: Remove unneccessary typecast in assignment
	to thread->Wait.return_argment.

2003-10-22	Joel Sherrill <joel@OARcorp.com>

	PR 512/core
	* src/tasks.c, src/taskvariabledelete.c: Run task variable destructor
	when task variable is deleted. Also some style cleanup.

2003-09-11	Joel Sherrill <joel@OARcorp.com>

	PR 488/rtems
	* src/taskcreate.c, src/tasks.c: Ensure notepads are zeroed.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* include/rtems.h, include/rtems/rtems/asr.h,
	include/rtems/rtems/attr.h, include/rtems/rtems/cache.h,
	include/rtems/rtems/clock.h, include/rtems/rtems/config.h,
	include/rtems/rtems/dpmem.h, include/rtems/rtems/event.h,
	include/rtems/rtems/eventmp.h, include/rtems/rtems/eventset.h,
	include/rtems/rtems/intr.h, include/rtems/rtems/message.h,
	include/rtems/rtems/modes.h, include/rtems/rtems/mp.h,
	include/rtems/rtems/msgmp.h, include/rtems/rtems/options.h,
	include/rtems/rtems/part.h, include/rtems/rtems/partmp.h,
	include/rtems/rtems/ratemon.h, include/rtems/rtems/region.h,
	include/rtems/rtems/regionmp.h, include/rtems/rtems/rtemsapi.h,
	include/rtems/rtems/sem.h, include/rtems/rtems/semmp.h,
	include/rtems/rtems/signal.h, include/rtems/rtems/signalmp.h,
	include/rtems/rtems/status.h, include/rtems/rtems/support.h,
	include/rtems/rtems/taskmp.h, include/rtems/rtems/tasks.h,
	include/rtems/rtems/timer.h, include/rtems/rtems/types.h,
	inline/rtems/rtems/asr.inl, inline/rtems/rtems/attr.inl,
	inline/rtems/rtems/dpmem.inl, inline/rtems/rtems/event.inl,
	inline/rtems/rtems/eventset.inl, inline/rtems/rtems/message.inl,
	inline/rtems/rtems/modes.inl, inline/rtems/rtems/options.inl,
	inline/rtems/rtems/part.inl, inline/rtems/rtems/ratemon.inl,
	inline/rtems/rtems/region.inl, inline/rtems/rtems/sem.inl,
	inline/rtems/rtems/status.inl, inline/rtems/rtems/support.inl,
	inline/rtems/rtems/tasks.inl, inline/rtems/rtems/timer.inl,