@@ -1,3 +1,7 @@
+2003-11-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Reworked.
+
 2003-10-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* src/regiongetsegment.c: Remove unneccessary typecast in assignment
